# platform.core.connectivity.bluetooth-agent

./: CMakeLists.txt  bluetooth-agent.manifest  project.config
ag-agent/: CMakeLists.txt  bluetooth-ag-agent.c  bluetooth-ag-agent.conf.in  bluetooth-ag-agent.h  bluetooth-ag-handler.c  bluetooth-ag-handler.h  bluetooth-ag-manager.c  org.bluez.ag_agent.service  voice-recognition-blacklist
hf-agent/: CMakeLists.txt  bluetooth-hf-agent.c  bluetooth-hf-agent.h  org.bluez.hf_agent.service
hfp-agent/: CMakeLists.txt  bluetooth-hfp-agent.c  bluetooth-hfp-agent.h  hfp_agent.xml  org.bluez.hfp_agent.service
map-agent/: .map_bmessage.c.swp  CMakeLists.txt  bluetooth_map_agent.c  bluetooth_map_agent.h  bluetooth_map_agent.xml  bluetooth_map_email.c  bluetooth_map_email.h  bluetooth_map_sms.c  bluetooth_map_sms.h  bluetooth_map_types.h  map_bmessage.c  map_bmessage.h  org.bluez.map_agent.service
packaging/: bluetooth-ag-agent.service  bluetooth-agent.spec  bluetooth-map-agent.service
pb-agent/: CMakeLists.txt  bluetooth_pb_agent.c  bluetooth_pb_agent.h  bluetooth_pb_agent.xml  bluetooth_pb_vcard.c  bluetooth_pb_vcard.h  org.bluez.pb_agent.service
